# injectable_stasis

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
injector/: injector.cpp  injector.rc  resource.h
src/: main.cpp  pch.hpp
src/GUI/: ClickGUI.cpp  ClickGUI.hpp
src/KeybindHandler/: KeybindHandler.cpp  KeybindHandler.hpp
src/ModuleManager/: Module.hpp  ModuleManager.cpp  ModuleManager.hpp  Setting.hpp
src/ModuleManager/Modules/Movement/: Stasis.cpp  Stasis.hpp
src/Rendering/: ArrayList.cpp  ArrayList.hpp
src/Rendering/Hooking/: hooking.cpp  hooking.hpp
src/Rendering/Overlay/: overlay.cpp  overlay.hpp
src/SDK/: sdk.cpp  sdk.hpp
src/SDK/Entity/: Entity.cpp  Entity.hpp
src/SDK/Minecraft/: Minecraft.cpp  Minecraft.hpp
